header and main

--- a/index.html
+++ b/index.html
@@ -6,7 +6,71 @@
     <title>kids website</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body class="quicksand-regular">
+    <header class="container">
+        <nav>
+            <div class="logo">
+                <img src="assets/logo.png" alt=""/>
+                <h4>SCHOOL</h4>
+            </div>
+            <div class="menu">
+               <a href="/#">Home</a>
+               <a href="/#">About</a>
+               <a href="/#">Facilities</a>
+               <a href="/#">Admission</a> 
+            </div>
+            <i class="fa-solid fa-bars"></i>
+            <button>Contact</button>
+        </nav>
+    </header>
+    <main>
+        <section class="hero container">
+            <div class="content">
+                <h1>
+                    <span>Empowering<br /></span> students from small age
+                    <span>towards vision</span>
+                </h1>
+                <p>
+                    With the courage, Confidence, Creativity and Compassion to make
+                    their Unique Contribution in a Diverse and Dynamic World.
+                </p>
+                <button>Enroll Now</button>
+            </div>
+            <img src="assets/hero-kids.png" alt="" />
+        </section>
+        <section>
+            <div>
+                <h2>Standard Curriculum</h2>
+            </div>
+                <div class="card">
+                <img src="assets/kinder.png" alt="">
+                <h4>Kinder (3-6) Years</h4>
+                    <p> Cum sociis natoque penatibuset magnis dis      parturient montes,
+                    nascetur ridiculus mu sdis parturient
+                    </p>
+                    <button>Read More</button>
+                </div>
+               <div class="card">
+                <img src="assets/" alt="">
+                <h4>Elementary School</h4>
+                    <p> Cum sociis natoque penatibuset magnis dis parturient montes,
+                        nascetur ridiculus mu sdis parturient</p>
+                    <button>Read More</button>
+               </div>
+               <div class="card">
+                <img src="assets/middle.png" alt="">
+                <h4>Elementary School</h4>
+                    <p>Cum sociis natoque penatibuset magnis dis parturient montes,
+                        nascetur ridiculus mu sdis parturient</p>
+                    <button>Read More</button>
+                </div>
+                <div class="icons">
+                    <i class="fa-solid fa-angle-left"></i>
+                    <span><i class="fa-solid fa-angle-right"></i></span>
+                  </div>
+                </div>
+        </section>
+    </main>
+    <footer></footer>
 </body>
 </html>
